# Fake-Through-Scope

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: Version.h.in  sourcelist.cmake
include/: wallHack.h
include/FSR/: ffx_assert.h  ffx_dx12.h  ffx_error.h  ffx_fsr2.h  ffx_interface.h  ffx_util.h
include/FSR_SDK/include/FidelityFX/host/: ffx_fsr2.h
include/reshade/: reshade_overlay.hpp
lib/: ffx_fsr2_x64.lib
scripts/: archive_artifacts.py
src/: D3DProxy.cpp  D3DProxy.h  DDSTextureLoader.cpp  DDSTextureLoader.h  DetourHooking.cpp  FSRImpl.cpp  FSRImpl.h  FTSData.cpp  FTSData.h  Hotkey.cpp  Hotkey.h  ImGuiImpl.cpp  ImGuiImpl.h  InputUtil.cpp  MathUtils.h  PCH.h  RTT.cpp  RTT.h  Renderer.hpp  ReshadeImpl.cpp  ReshadeImpl.h  SimpleIni.h  Texture2D.cpp  Texture2D.h  Utilities.h  WICTextureLoader11.cpp  WICTextureLoader11.h  WinMin.h  XUtil.h  debug.h  hooking.cpp  hooking.h  imgui.cpp  imgui_draw.cpp  main.cpp  reshade_api_device.hpp  reshade_overlay.hpp  state_tracking.cpp  stb_image.h  universal.cpp  (+1 more)
src/HLSL/: ScopeEffect_PS - 副本.hlsl1  ScopeEffect_PS.hlsl  ScopeEffect_PS_Legacy.hlsl  ScopeEffect_PS_Output.hlsl  ScopeEffect_PS_Output_Legacy.hlsl  ScopeEffect_VS.hlsl  ScopeEffect_VS_Legacy.hlsl  ScopeEffect_VS_Output.hlsl  Triangle.hlsli
src/HLSL/BU/: 新建文本文档.txt
